--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Fitness Tracker</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="/calendar.js" defer></script>
 </head>
 <body>
